moved constant: USER_AGENT to be: Settings.crawler.user_agent

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,3 +3,6 @@ proxy:
   enabled: false
   host: "wwwgate0-ch.mot.com"
   port: 1080
+
+crawler:
+  user_agent: "Mozilla/5.0 (X11; Linux i686) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.142 Safari/535.19"
