added comments for config/settings.yml

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,8 +1,11 @@
 
+# set it to false if you can access the internet directly
 proxy:
   enabled: false
   host: "wwwgate0-ch.mot.com"
   port: 1080
 
+# settings for crawler
 crawler:
+  # to make it more like a real user, but not a robot
   user_agent: "Mozilla/5.0 (X11; Linux i686) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.142 Safari/535.19"
